Added uptime kuma. started speedtest tracking

--- a/docker/homepage/config/settings.yaml
+++ b/docker/homepage/config/settings.yaml
@@ -5,3 +5,5 @@
 providers:
   openweathermap: openweathermapapikey
   weatherapi: weatherapiapikey
+title: Homelab Homepage
+description: Proxmox Homelab Environment
