--- a/docker/homepage/config/services.yaml
+++ b/docker/homepage/config/services.yaml
@@ -2,10 +2,15 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/configs/services/
 
-- My First Group:
-    - My First Service:
-        href: http://localhost/
-        description: Homepage is awesome
+- Applications:
+    - Proxmox:
+        href: http://192.168.1.106:8006/
+        description: Virtual Environment
+        icon: mdi-server
+    - Uptime Kuma:
+        href: http://192.168.1.138:3001/
+        description: Uptime Monitoring
+        icon: mdi-bell
 
 - My Second Group:
     - My Second Service:
