--- a/docker/homepage/docker-compose.yaml
+++ b/docker/homepage/docker-compose.yaml
@@ -8,5 +8,5 @@ services:
       - ./config:/app/config
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      HOMEPAGE_ALLOWED_HOSTS: 192.168.1.138:3000 # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
+      HOMEPAGE_ALLOWED_HOSTS: 192.168.1.146:3000
     restart: unless-stopped
